--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ dist/
 tmp/
 app/**/*.js
 app/**/*.js.map
+.angular/
 
 ##############################################################################
 # Node.js / Frontend
