--- a/config/docker-compose.backend.yml
+++ b/config/docker-compose.backend.yml
@@ -1,22 +1,17 @@
-version: '3.8'
-
 services:
   backend:
+    image: backend
+    container_name: backend
     build:
       context: ../backend
       dockerfile: Dockerfile
-    container_name: communication_app_backend
     command: >
-      sh -c "python manage.py migrate &&
+      sh -c "python manage.py makemigrations &&
+             python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ../backend:/app
     ports:
       - "8000:8000"
     env_file:
-      - ../backend/.env
-    environment:
-      DEBUG: "1"
-      SECRET_KEY: "${SECRET_KEY}"
-      DJANGO_ALLOWED_HOSTS: "${DJANGO_ALLOWED_HOSTS}"
-      DATABASE_URL: "postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
+      - .env
