--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -71,7 +71,12 @@
               "buildTarget": "frontend:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "ssl": true,
+            "sslCert": "certs/localhost-cert.pem",
+            "sslKey": "certs/localhost-key.pem"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
