--- a/.gitignore
+++ b/.gitignore
@@ -297,3 +297,10 @@ fabric.properties
 
 # Azure Toolkit
 .idea/**/azureSettings.xml
+
+# Keys and certificates
+certs/
+*.pem
+
+# Migrations
+migrations/
